@@ -43,10 +43,10 @@ class RunController : public QObject
   void runResumed();
 
  public slots:
- void playSounds(int, int*);
+  void playSounds(int, int*);
   void speakWords(QString);
   void setVolume(int);
-  void system(char*);
+  void executeSystem(char*);
   void playWAV(QString);
   void stopWAV();
   void waitWAV();
