@@ -1,3 +1,8 @@
+2010-09-14 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.39
+	* fixed SYSTEM statement to use mutex to wait correctly
+	* added preference settings to allow or disable system, get/setsetting
+
+
 2010-09-12 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.38
 	* added GETSETTING and SETSETTING for persistant application storage to the registery/config folder
 
